# movie-night

./: .env.example  Cargo.toml  README.md  docker-compose.yml
migrations/2022-11-01-1922_create-users/: down.sql  up.sql
migrations/2022-11-02-033724_create_movies/: up.sql
migrations/2022-11-03-2239_create-movielists/: down.sql  up.sql
migrations/2022-11-04-2353_create-movielists-movie/: down.sql  up.sql
migrations/2022-11-15-2030_create-schedules/: down.sql  up.sql
migrations/2022-11-15-2045_create-showings/: down.sql  up.sql
migrations/2022-11-23-1750_create-sessions/: down.sql  up.sql
migrations/2022-11-23-1925_drop-users-token-column/: up.sql
src/: main.rs  movie_builder.rs  views.rs
src/controllers/: auth_controller.rs  mod.rs  movie_controller.rs  movielist_controller.rs  schedule_controller.rs
src/models/: auth.rs  mod.rs  movie.rs  movielist.rs  omdb.rs  schedule.rs  session.rs  user.rs
src/requests/: account.rs  add_movie.rs  auth.rs  mod.rs  movielist.rs  password_reset.rs  schedule.rs  showing.rs
src/responses/: mod.rs  movielist.rs  omdb.rs  showing.rs
src/traits/: mod.rs  moviedb.rs
static/: app.css
static/js/: app.js
templates/: 404.html.tera  500.html.tera  admin.html.tera  base.html.tera  list.html.tera  lists.html.tera  login.html.tera  password_reset.html.tera  schedule.html.tera
