[package]
name = "movienight_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.4.1"
async-std = { version = "1", features = ["attributes"] }
async-trait = "0.1.58"
chrono = { version = "0.4.19", default-features = false, features = ["clock", "std", "serde"] }
dotenvy = "0.15.6"
dotenv_codegen = "0.15.0"
password-hash = "0.4.2"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0.147", features = ["derive"] }
sqlx = { version = "0.6", features = ["runtime-async-std-native-tls", "mysql", "macros", "chrono", "json"] }
tera = { version = "1.17.1", features = ["builtins"] }
rand = "0.8.5"
reqwest = { version = "0.11", features = ["blocking"] }

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["tera"]
